--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "yo",
-  "version": "0.0.0",
+  "name": "podly",
+  "version": "0.0.1",
   "dependencies": {
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
@@ -8,11 +8,12 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "froogaloop": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "yoApp"
+  "moduleName": "podlyApp"
 }
