--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "froogaloop": "~1.0.0"
+    "froogaloop": "~1.0.0",
+    "bootstrap-sass": "~3.3.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
