--- a/episode-editor/bower.json
+++ b/episode-editor/bower.json
@@ -3,9 +3,10 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.3",
+    "firebase": "~2.2.9",
     "jquery": "~2.1.4",
-    "firebase": "~2.2.9"
+    "modernizr": "~2.8.3",
+    "moment": "~2.10.6"
   },
   "overrides": {
     "bootstrap-sass": {
