--- a/episode-editor/package.json
+++ b/episode-editor/package.json
@@ -4,6 +4,7 @@
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
+    "grunt-bower-verify": "^2.0.1",
     "grunt-browser-sync": "^2.1.2",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
