--- a/episode-editor/bower.json
+++ b/episode-editor/bower.json
@@ -4,9 +4,11 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "firebase": "~2.2.9",
+    "handlebars": "~4.0.2",
     "jquery": "~2.1.4",
     "modernizr": "~2.8.3",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "underscore": "~1.8.3"
   },
   "overrides": {
     "bootstrap-sass": {
