Podcaster info on platform.html is now sticky :)

--- a/episode-editor/bower.json
+++ b/episode-editor/bower.json
@@ -8,7 +8,8 @@
     "jquery": "~2.1.4",
     "modernizr": "~2.8.3",
     "moment": "~2.10.6",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "sticky-kit": "~1.1.2"
   },
   "overrides": {
     "bootstrap-sass": {
